Fixing cart styles on mobile

--- a/app/styles/th/_shopping-cart.scss
+++ b/app/styles/th/_shopping-cart.scss
@@ -931,6 +931,7 @@
 	  height: auto !important;
 	  overflow-y: auto !important;
 	  margin-top: 85px !important;
+	  min-height: 200px;
 	}
 	&__panel{
 	  overflow: auto;
